--- a/src/main/resources/static/css/scss/style.scss
+++ b/src/main/resources/static/css/scss/style.scss
@@ -28,11 +28,10 @@
 @import 'pages/admin/board/noticeMng';
 @import 'pages/admin/board/qaMng';
 @import 'pages/admin/board/reviewMng';
-@import 'pages/admin/item/itemDtl';
 @import 'pages/admin/item/itemForm';
 @import 'pages/admin/item/itemMng';
 @import 'pages/admin/order/orderMng';
-@import 'pages/admin/main';
+@import 'pages/admin/dashboard';
 @import 'pages/board/notice/notice'; // board start
 @import 'pages/board/notice/noticeDtl';
 @import 'pages/board/notice/noticeForm';
