--- a/src/main/resources/templates/admin/account/profileForm.html
+++ b/src/main/resources/templates/admin/account/profileForm.html
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="section_body profile_form_body">
-                        <form id="profileForm" class="profile_form" th:action="@{'/admin/account/update/' + ${profileFormDto.id}}" th:object="${profileFormDto}" method="post">
+                        <form id="profileForm" class="profile_form" th:action="@{'/admin/members/' + ${profileFormDto.id}}" th:object="${profileFormDto}" method="post">
                             <table class="col_header_table_color">
                                 <colgroup>
                                     <col style="width:20%;">
@@ -237,8 +237,6 @@
                 validateTotalOrderPrice(totalOrderPriceVal) && validatePoint(pointVal) && validateTotalUsePoint(totalTotalUsePointVal) &&
                 validateTotalPoint(totalTotalPointVal) && validateEmailVerification(fullEmail, mailVal1, mailVal2)) {
                 updateProfile(form, pwVal);
-            } else {
-                alert("else 진입");
             }
         }
 
@@ -437,22 +435,22 @@
 
         function modifyProfile() {
             let accountId = $(this).attr("data-accountId");
-            location.href = '/admin/account/update/' + accountId;
+            location.href = '/admin/members/' + accountId + '/edit';
         }
 
         function cancelProfile() {
-            location.href = '/admin/account';
+            location.href = '/admin/members';
         }
 
         function deleteProfile() {
             if (confirm("정말로 회원을 삭제하시겠습니까?")) {
                 let accountId = $(this).attr("data-accountId");
                 $.ajax({
-                    url: '/admin/account/delete/' + accountId,
+                    url: '/admin/members/' + accountId,
                     type: 'delete',
                     success(res) {
                         alert(res);
-                        location.href = '/admin/account';
+                        location.href = '/admin/members';
                     },
                     error(request) {
                         alert(request.responseText);
@@ -461,9 +459,9 @@
             }
         }
 
-        function strongPassword (str) {
-            return /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,20}$/.test(str);
-        }
+        // function strongPassword (str) {
+        //     return /^(?=.*[a-zA-Z])(?=.*[!@#$%^*+=-])(?=.*[0-9]).{8,20}$/.test(str);
+        // }
 
         function hasBlank (str) {
             return /\s/g.test(str);
